--- a/doc/arxiv/v2/cover.tex
+++ b/doc/arxiv/v2/cover.tex
@@ -22,8 +22,7 @@
     \begin{center}
     {\bf\LARGE Degree Paper for Masters in Statistics}
     \\~\\
-    {\bf\Large --- A Sample Format}
-
+    {\Large RATE: Causal Explainability of Reward Models with Imperfect Counterfactuals}
 
     \vspace{1.4in}
     {\Large Sean Richardson}
@@ -41,5 +40,5 @@
     {\Large Date} ~\underline{~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}
 
     \vfill
-    \begin{center}{\large January 5, 2025}\end{center}
+    \begin{center}{\large March 15, 2025}\end{center}
     \end{document}
