--- a/doc/arxiv/v2/thesis.tex
+++ b/doc/arxiv/v2/thesis.tex
@@ -52,13 +52,10 @@
     
     \noindent
     \thispagestyle{empty}
-    \underline{\bf Master's Paper of the Department of Statistics, The University of Chicago}
-    %\\~~(Internal document only, not for circulation) 
-    \\~~(Internal departmental document only, not for circulation. Anyone wishing to publish or cite any portion therein must have the express, written permission of the author.)
-    
+
     \vspace{1.8in}
     \begin{center}
-    {\bf\LARGE Degree Paper for Masters in Statistics}
+    {\bf\LARGE Causal Evaluations of Black-Box Rewards Models via Textual Interventions}
     
     \vspace{1.4in}
     {\Large Sean Richardson}
